# r_viewer

./: Cargo.toml  README.md  client.py  main.py  test_api.ps1  test_r_viewer.ps1
frontend/: app.py  pyproject.toml  test_ui.py
src/: main.rs
