[package]
name = "r_viewer"
version = "0.1.0"
edition = "2021"
description = "Rust-powered Windows Event Viewer with SurrealDB backend & Gradio frontend vibes"
authors = ["UnformedHail148 <your-heart@knows.who>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UnformedHail148/r_viewer"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# SurrealDB 2.0 - note the different feature flag
surrealdb = { version = "2", features = ["kv-rocksdb"] }

axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }

windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_EventLog",
    "Win32_System_Time",
] }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Add these for better Windows string handling
widestring = "1.0"
toml = "1.0.4"
quick-xml = "0.39.2"
scopeguard = "1.2.0"
tower-http = { version = "0.6.8", features = ["cors"] }
